k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-service
  namespace: stage-id
spec:
  selector:
    app: my-node-app
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
