k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stage-ingress
  namespace: stage-id
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "stage-id-ip"
    cloud.google.com/neg: '{"ingress": true}'
    networking.gke.io/managed-certificates: "stage-id-cicd-ssl"
    kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    networking.gke.io/frontend-config: "ssl-redirect-config"
spec:
  rules:
    - host: pre-api-cicd.oto.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-node-service
                namespace: stage-id
                port:
                  number: 80
